[package]
name = "portable-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11.20", features = ["json"] }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
